--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="icons-1.9.1/icons-1.9.1/font/bootstrap-icons.css">
+    <script src="https://code.jquery.com/jquery-3.6.1.js"
+        integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>bootstrap</title>
 </head>
@@ -246,6 +248,19 @@
         </div>
 
         <!-- card end  -->
+        <div class="card m-4">
+            <div class="card-header text-center">
+                Best Developer
+            </div>
+            <!-- <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <p>A well-known quote, contained in a blockquote element.</p>
+                    <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source
+                            Title</cite></footer>
+                </blockquote>
+            </div> -->
+        </div>
+
 
         <div class="card-group mx-4 ">
             <div class="card border-0 ">
@@ -261,18 +276,7 @@
                 </div>
             </div>
         </div>
-        <div class="card m-4">
-            <div class="card-header text-center">
-                Best Developer
-            </div>
-            <div class="card-body">
-                <blockquote class="blockquote mb-0">
-                    <p>A well-known quote, contained in a blockquote element.</p>
-                    <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source
-                            Title</cite></footer>
-                </blockquote>
-            </div>
-        </div>
+
     </main>
     <!-- sliders end-->
 
